--- a/templates/header.hbs
+++ b/templates/header.hbs
@@ -1,12 +1,4 @@
 <a class="skip-navigation" tabindex="1" href="#main-content">{{t 'skip_navigation' }}</a>
-
- {{!-- <div style="width: 800px; margin:auto;">
- <div id="searchbox">
- <div class="CoveoSearchbox" data-enable-omnibox="true">
- </div>
- </div>
- </div> --}}
-
 <header>
   <div class="container header">
     <div class="logo">
@@ -50,12 +42,11 @@
       {{/if}}
     </div>
   </div>
-  <p class="warning-banner" style="margin: 0; padding:10px 10vw; border: 0; border-radius:0; text-align:center;">Ensure you can help prevent and respond to a security incident in Adobe Commerce on cloud infrastructure by following these best practices!
-    See all the details in this Adobe Commerce Support Knowledge Base article here: 
-    <br>
-    <a href="https://support.magento.com/hc/en-us/articles/8992381597453">Adobe Commerce on cloud Best Practices to Prevent and Respond to a Security Incident.</a>
+    <p class="info-banner" style="margin: 0; padding:10px 10vw; border: 0; border-radius:0; text-align:center;">
+    The Adobe Commerce Support Knowledge Base has migrated to the Adobe Commerce Documentation section of Adobe Experience League.</br>
+    Click <a style="color:#EBC944 !important ;" href="https://experienceleague.adobe.com/docs/commerce-knowledge-base/kb/overview.html?lang=en">Support Knowledge Base</a> to access our new Knowledge Base Home.</br>
+    Knowledge Base articles, as well as other Commerce documentation, will be still searchable and available when creating support tickets from the Adobe Commerce Help Center.
   </p>
-
 <script>
     window.fedsConfig = {
         locale: 'en',
