--- a/templates/home_page.hbs
+++ b/templates/home_page.hbs
@@ -9,20 +9,19 @@
   </div>
   <div class="hero-inner">
     <h2 class="visibility-hidden">{{ t 'search' }}</h2>
-    {{!-- <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" focusable="false" viewBox="0 0 12 12" class="search-icon" aria-hidden="true">
-      <circle cx="4.5" cy="4.5" r="4" fill="none" stroke="currentColor"/>
-      <path stroke="currentColor" stroke-linecap="round" d="M11 11L7.5 7.5"/>
-    </svg> --}}
      <div id="searchbox">
        <div class="CoveoSearchbox" data-enable-omnibox="true">
-    {{!-- {{search submit=false placeholder='Looking for something specific?' class='search search-full'}} --}}
-
       </div>
     </div>
   </div>
 </section>
 
 <div class="container">
+    <p class="warning-banner" style="margin: 0 0 25px 0; padding:10px 10vw; border: 0; border-radius:0; text-align:center;">Ensure you can help prevent and respond to a security incident in Adobe Commerce on cloud infrastructure by following these best practices!
+    See all the details in this Adobe Commerce Support Knowledge Base article here: 
+    <br>
+    <a href="https://support.magento.com/hc/en-us/articles/8992381597453">Adobe Commerce on cloud Best Practices to Prevent and Respond to a Security Incident.</a>
+  </p>
   <section class="section knowledge-base">
     <h2 class="visibility-hidden">{{ t 'categories' }}</h2>
     <section class="home-page-categories blocks">
