--- a/style.css
+++ b/style.css
@@ -5450,6 +5450,12 @@ p.warning-banner {
 	color:#c1741b;
 }
 
+p.info-banner {
+  background-color: #1b6dc1;
+  border: #1b6dc1 solid 1px;
+  color:white;
+}
+
 p.migration-banner {
 	background-color: white;
 	border: #F29423 solid 1px;
@@ -5532,6 +5538,7 @@ code[class*="language-"], pre[class*="language-"] {
   border-left-width: 3rem;
   margin-bottom: 2rem !important;
   box-shadow: 0 0.5em 1em -0.125em rgb(10 10 10 / 10%), 0 0px 0 1px rgb(10 10 10 / 2%);
+  background-color: #fff;
 }
 
 
@@ -5610,6 +5617,6 @@ code[class*="language-"], pre[class*="language-"] {
 }
 
 
-/* .article-header, .article-info{
-  opacity: 30%;
-} */
+.article-header, .article-info{
+  opacity: 45%;
+}
