--- a/templates/new_request_page.hbs
+++ b/templates/new_request_page.hbs
@@ -4,8 +4,16 @@
   <nav class="sub-nav">
     {{breadcrumbs}}
   </nav>
-  <div class="temporary_banner">
-    <span class = "banner_heading">Data Privacy Notice</span><span class="banner_close_btn">&times;</span><br>Adobe technical support may require access to your Adobe Commerce related data in order to provide support. The primary Adobe Commerce account holder can choose to provide this authorization in their Adobe Commerce account privacy settings. Allowing this access prior to  support request creation will help ensure the issue can be properly investigated and/or help increase the speed of resolution.<br>For more information, please visit: <a href='https://support.magento.com/hc/en-us/articles/360052293411' target='_blank'>https://support.magento.com/hc/en-us/articles/360052293411</a>
+  <div class="extension info">
+    <div>
+      Data Privacy Notice
+    </div>
+    <div>
+      Adobe technical support may require access to your Adobe Commerce related data in order to provide support. The primary Adobe Commerce account holder can choose to provide this authorization in their Adobe Commerce account privacy settings. Allowing this access prior to  support request creation will help ensure the issue can be properly investigated and/or help increase the speed of resolution.
+      <br>
+      For more information, please visit: 
+      <a href='https://experienceleague.adobe.com/docs/commerce-knowledge-base/kb/announcements/commerce-announcements/adobe-support-customer-data-access-and-privacy.html?lang=en' target='_blank'>Adobe support customer data access and privacy</a>
+    </div>
   </div>
   <h1>
     {{t 'submit_a_request'}}
