--- a/templates/header.hbs
+++ b/templates/header.hbs
@@ -1,4 +1,5 @@
 <a class="skip-navigation" tabindex="1" href="#main-content">{{t 'skip_navigation' }}</a>
+<div id="searchbox"></div>
 <header>
   <div class="container header">
     <div class="logo">
