Coveo searchbox bug fix

--- a/templates/request_page.hbs
+++ b/templates/request_page.hbs
@@ -1,4 +1,5 @@
 <div class="my-activities-nav">
+  <div id="searchbox"></div>
   <div class="container">
     <nav class="collapsible-nav">
       <button type="button" class="collapsible-nav-toggle" aria-label="{{t 'toggle_navigation'}}" aria-expanded="false">
