--- a/templates/user_profile_page.hbs
+++ b/templates/user_profile_page.hbs
@@ -1,4 +1,5 @@
 <header id="main-content" class="profile-header">
+  <div id="searchbox"></div>
   <div class="container">
     <div class="profile-info">
       <div class="avatar profile-avatar">
