--- a/templates/error_page.hbs
+++ b/templates/error_page.hbs
@@ -1,4 +1,5 @@
 <div class="container-divider"></div>
+<div id="searchbox"></div>
 <div id="main-content" class="error-page">
   <h1>{{t 'oops'}}</h1>
 
