--- a/templates/new_request_page.hbs
+++ b/templates/new_request_page.hbs
@@ -1,4 +1,5 @@
 <div class="container-divider"></div>
+<div id="searchbox"></div>
 <div class="container">
   <nav class="sub-nav">
     {{breadcrumbs}}
