--- a/templates/requests_page.hbs
+++ b/templates/requests_page.hbs
@@ -1,4 +1,5 @@
 <div class="container-divider"></div>
+<div id="searchbox"></div>
 
 <div class="container">
   <h1 style="margin-bottom: 0px">My Tickets</h1>
