Updated banner and ticket deflection links to open in new tab

--- a/templates/header.hbs
+++ b/templates/header.hbs
@@ -44,7 +44,7 @@
   </div>
     <p class="info-banner" style="margin: 0; padding:10px 10vw; border: 0; border-radius:0; text-align:center;">
     The Adobe Commerce Support Knowledge Base has migrated to the Adobe Commerce Documentation section of Adobe Experience League.</br>
-    Click <a style="color:#EBC944 !important ;" href="https://experienceleague.adobe.com/docs/commerce-knowledge-base/kb/overview.html?lang=en">Support Knowledge Base</a> to access our new Knowledge Base Home.</br>
+    Click <a target="_blank" style="color:#EBC944 !important ;" href="https://experienceleague.adobe.com/docs/commerce-knowledge-base/kb/overview.html?lang=en">Support Knowledge Base</a> to access our new Knowledge Base Home.</br>
     Knowledge Base articles, as well as other Commerce documentation, will be still searchable and available when creating support tickets from the Adobe Commerce Help Center.
   </p>
 <script>
