SWAT-1281: Updating Coveo Status

--- a/templates/document_head.hbs
+++ b/templates/document_head.hbs
@@ -29,6 +29,6 @@
 {{!-- COVEO INTEGRATION --}}
 
 <link rel="stylesheet" href="https://static.cloud.coveo.com/searchui/v2.10099/2/css/CoveoFullSearch.css" integrity="sha512-Sd7mINT5SVecaWbHpz8gbBu9KFN34Mfpzp8UX1k3AVPeUZ6RYKm3/2RM/Ux69rBN4pmHnxmZpm2O2xPgrsAUNA==" crossorigin="anonymous" />
-<script class="coveo-script" src="https://static.cloud.coveo.com/searchui/v2.10099/2/js/CoveoJsSearch.Lazy.js" integrity="sha512-VdzTZev33bI5/6kITF3tYSZqqWlZhF7Or3nWkMv8MYft31v+WsFCTANRbKdbjgTWXOBFTnY7VFkYUVJfAQVPmw==" crossorigin="anonymous"></script>
-<script class="coveo-script" src="https://static.cloud.coveo.com/coveoforzendesk/v0.0.2/selfservice/commonjs/CoveoForZendesk.min.js" crossorigin="anonymous"></script>
-
+{{!-- <script class="coveo-script" src="https://static.cloud.coveo.com/searchui/v2.10099/2/js/CoveoJsSearch.Lazy.js" integrity="sha512-VdzTZev33bI5/6kITF3tYSZqqWlZhF7Or3nWkMv8MYft31v+WsFCTANRbKdbjgTWXOBFTnY7VFkYUVJfAQVPmw==" crossorigin="anonymous"></script> --}}
+<script class="coveo-script" src="https://static.cloud.coveo.com/searchui/v2.10102/js/CoveoJsSearch.Lazy.js"></script>
+ <script class="coveo-script" src="https://static.cloud.coveo.com/coveoforzendesk/v0.0.2/selfservice/commonjs/CoveoForZendesk.min.js" crossorigin="anonymous"></script>
