--- a/templates/new_request_page.hbs
+++ b/templates/new_request_page.hbs
@@ -25,7 +25,7 @@
     <div style="flex: 50%; margin-right:30px" class="form">
       {{request_form wysiwyg=true}}
     </div>
-    <CoveoCaseDeflection style="flex: 50%; margin-top:18px">
+    <CoveoCaseDeflection style="flex: 50%; margin-top:18px" data-throttle-time=5000>
       <div id="case-deflection-text" class="case-deflection-text">
         <h2 style="margin-bottom: 5px;">Suggested Articles</h2>
         <p style="margin: 5px 0 5px 0; font-size:15px; color: #313a45;">Based on your input and browsing, here are some articles we think can solve your issue.</p>
