Updated redirect link script

--- a/templates/article_page.hbs
+++ b/templates/article_page.hbs
@@ -156,7 +156,7 @@
         else if (item.match(/\.md/g)) {
           exlFilePathArray.push(item.replace('.md', '.html'))
         } 
-        else if (item != 'help' && item != 'src' && item != 'general') {
+        else if (item != 'help' && item != 'src' && item != 'general' && item != 'help-center') {
           exlFilePathArray.push(item)
         }
       }) 
