--- a/templates/search_results.hbs
+++ b/templates/search_results.hbs
@@ -5,7 +5,7 @@
   </nav>
 <div id="search" class="CoveoSearchInterface" data-enable-history="true">
   <div class="CoveoFolding"></div>
-  <div class="CoveoAnalytics"></div>
+  <div class="CoveoAnalytics" data-search-hub="Commerce_Help_Main_search"></div>
   <div class="coveo-search-section">
     <div class="CoveoSearchbox" data-enable-omnibox="true" data-number-of-suggestions="10" data-partial-match-keywords=""></div>
   </div>
