updated banner text

--- a/templates/header.hbs
+++ b/templates/header.hbs
@@ -48,7 +48,7 @@
     Knowledge Base articles, as well as other Commerce documentation, will be still searchable and available when creating support tickets from the Adobe Commerce Help Center.
   </p> --}}
     <p class="warning-banner" style="margin: 0; padding:10px 10vw; border: 0; border-radius:0; text-align:center;">
-      The Adobe Commerce support portal is experiencing an update to user logins and is currently unavailable. For any Urgent outage issues, please use the support telephone help line. For all other issues, please work with your CSM to open a support case or wait until the maintenance is completed. 
+      The Adobe Commerce support portal is experiencing an update to user logins and is currently unavailable. For any Urgent outage issues, please use the support telephone help line. For all other issues, please work with your Customer Success Manager to open a support case or wait until the maintenance is completed. 
   </p>
 <script>
     window.fedsConfig = {
