--- a/templates/header.hbs
+++ b/templates/header.hbs
@@ -42,13 +42,10 @@
       {{/if}}
     </div>
   </div>
-    {{!-- <p class="info-banner" style="margin: 0; padding:10px 10vw; border: 0; border-radius:0; text-align:center;">
+    <p class="info-banner" style="margin: 0; padding:10px 10vw; border: 0; border-radius:0; text-align:center;">
     The Adobe Commerce Support Knowledge Base has migrated to the Adobe Commerce Documentation section of Adobe Experience League.</br>
     Click <a target="_blank" style="color:#EBC944 !important ;" href="https://experienceleague.adobe.com/docs/commerce-knowledge-base/kb/overview.html?lang=en">Support Knowledge Base</a> to access our new Knowledge Base Home.</br>
     Knowledge Base articles, as well as other Commerce documentation, will be still searchable and available when creating support tickets from the Adobe Commerce Help Center.
-  </p> --}}
-    <p class="warning-banner" style="margin: 0; padding:10px 10vw; border: 0; border-radius:0; text-align:center;">
-      The Adobe Commerce support portal is experiencing an update to user logins and is currently unavailable. For any Urgent outage issues, please use the support telephone help line. For all other issues, please work with your Customer Success Manager to open a support case or wait until the maintenance is completed. 
   </p>
 <script>
     window.fedsConfig = {
